--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,9 +34,9 @@ classifiers = [
 ]
 dynamic = ["version"]
 dependencies = [
-    "scikit-image>=0.24.0",
-    "pillow>=11.0.0",
-    "numpy>=2.1.3"
+    "scikit-image",
+    "pillow",
+    "numpy",
 ]
 
 [project.optional-dependencies]
