[FIX]: add permission in main.yml for Pypi upload

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,6 +3,8 @@ name: Main workflow
 on: [push, pull_request]
 
 jobs:
+  permissions:
+    id-token: write
   tests:
     name: Tests & Checks
     runs-on: ubuntu-latest
