--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,9 +30,6 @@ jobs:
     name: Build and upload release to Pypi
     runs-on: ubuntu-latest
     needs: tests
-    permissions:
-      contents: read
-      id-token: write
 
     steps:
     - uses: actions/checkout@v3
@@ -46,3 +43,5 @@ jobs:
     - name: Publish package distributions to PyPI
       if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
       uses: pypa/gh-action-pypi-publish@release/v1
+      with:
+        password: ${{ secrets.PYPI_API_TOKEN }}
