--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ requires = [
 build-backend = "hatchling.build"
 
 [project]
-name = "monalisa"
+name = "monalisa-ai"
 authors = [
     {name = "Nathan Hoche", email = "hochenat@gmail.com"},
 ]
